--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/Goteamtim/Library/Application Support/NetBeans/7.3.1/build.properties
+user.properties.file=C:\\Users\\Tim\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
